# BaseLayer

./: .env.example  .gitignore  .versionrc  CHANGELOG.md  CREATE_LESSON_GUIDE.md  README.md  dev.sh  docker-compose.yml  package.json  pyproject.toml  tidraw.md
.agent/: MODAL.md
.agent/skills/modal/: SKILL.md
.agents/rules/: learning-environment.md
.github/workflows/: ci-cd.yml  release.yml
backend/: Dockerfile  ai_service.py  main.py  migrate_db.py  modal_app.py
backend/routers/: ai.py  file_courses.py
backend/scripts/: create_lesson.py  create_sheet_for_lesson.py  migrate_db.py
courses/llms-from-scratch/chapter01/lesson01/: README.md
courses/pytorch/lesson1/: README.md  main.py  solution.py  test.py
courses/tinytorch/: README.md
courses/tinytorch/lesson1/: README.md  main.py  solution.py  test.py
courses/tinytorch/lesson2/: README.md  main.py
courses/tinytorch/lesson3/: README.md  main.py  solution.py  test.py
courses/tinytorch/lesson4/: main.py
docs/: RESEARCH_SETUP.md  cdci_modal.md  google_sheets_guide.md  modal_deployment_guide.md  restricted_code_modal.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: AIChatPanel.tsx  CodeEditor.tsx  DrawingCanvas.tsx  UserMenu.tsx
frontend/src/pages/: CodingPage.tsx  CoursesPage.tsx  FileCodingPage.tsx  Login.tsx  Signup.tsx
frontend/src/services/: aiService.ts
research/: README.md
sandbox/: Dockerfile
scripts/: version-updater.cjs
tests/: test_rust_course.py
(+45 files in other folders)
