[project]
name = "baselayer"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=1.69.0",
    "modal>=1.3.0.post1",
    "pydantic-ai-slim>=1.73.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]
research = [
    "marimo>=0.10.12",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = ["backend"]
